Add queue reset timing breakdown